<?xml version="1.0" encoding="utf-8"?>
<!-- Modify by yongwu.zhou 2012/06/07 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.yecon.avin.AVINSurfaceView
        android:id="@+id/avin_surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background" />

    <TextView
        android:id="@+id/av_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/bottom_img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/mm_playcontrlbar_bg"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/switch_front_rear"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginRight="30dip"
            android:background="@drawable/apply_button"
            android:focusable="true"
            android:text="@string/front"
            android:textSize="40dp" />

        <Button
            android:id="@+id/auto"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginRight="30dip"
            android:background="@drawable/auto_button"
            android:focusable="true"
            android:text="@string/auto"
            android:textSize="40dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/av_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_signal"
        android:textSize="24sp" />

</FrameLayout>